aws-tasks/week2/stackEC2andLoadFileFromS3.yml
Parameters:
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
    Description: Enter t2.micro, t2.small  Default is t2.micro.
AWSTemplateFormatVersion: "2010-09-09"
Description: Simple EC2 isntance
Resources:
  MyEC2Instance:
    Type: "AWS::EC2::Instance"
    Properties: 
      IamInstanceProfile: !Ref BaseInstanceProfile
      ImageId: "ami-077e31c4939f6a2f3"
      InstanceType:
        Ref: InstanceTypeParameter
      KeyName: es-tut
      UserData:
        Fn::Base64: !Sub |
          sudo yum update -y
          aws s3 cp s3://week2-backet/temp.txt files/tmp.txt &> log.txt
  BaseInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref S3WritableRole
  S3WritableRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /   
  RolePolices:
    Type: AWS::IAM::Policy
    DependsOn:
      - MyEC2Instance
    Properties:
      PolicyName: S3RWPolicy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action: 's3:*'
            Resource: '*'
      Roles:
        - !Ref S3WritableRole  
  EC3SecurituGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 Security Group
      VpcId: vpc-e17dee8a
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
Outputs:
  EC2Port:
    Description: IP of EC2 instance
    Value: !GetAtt  MyEC2Instance.PublicIp
